# imessage-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT-STATUS.md  README.md
.github/workflows/: ci.yml
macos/: Info.plist
scripts/: build-app.sh
src/: app.rs  db.rs  export.rs  lib.rs  main.rs  model.rs  ui.rs
