[package]
name = "imessage-tui"
version = "0.1.1"
edition = "2024"
description = "A read-only terminal browser and Markdown exporter for macOS Messages"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.28"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"] }
imessage-database = "=4.2.0"
ratatui = "0.29"
rusqlite = { version = "0.40", features = ["bundled"] }

[profile.release]
lto = "thin"
strip = true

[[bin]]
name = "imessage-gui"
path = "src/bin/imessage-gui.rs"
